[package]
name = "convert_image_to_web"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
image = "0.25.6"
leptos = { version = "0.8.0", features = ["csr"] }
ndarray = "0.16.1"
nshare = "0.10.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["FileList", "File"] }
